--- a/PersonalClinic/Views/Patients/Delete.cshtml
+++ b/PersonalClinic/Views/Patients/Delete.cshtml
@@ -36,6 +36,9 @@
         <dd>
             @Html.DisplayFor(model => model.Identifier)
         </dd>
+        <dd>
+            @Html.DisplayFor(model => model.BirthDate)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
