--- a/PersonalClinic/Views/Patients/Details.cshtml
+++ b/PersonalClinic/Views/Patients/Details.cshtml
@@ -34,6 +34,9 @@
         <dd>
             @Html.DisplayFor(model => model.Identifier)
         </dd>
+        <dd>
+            @Html.DisplayFor(model => model.BirthDate)
+        </dd>
     </dl>
 </div>
 <div>
