--- a/PersonalClinic/Views/Patients/Index.cshtml
+++ b/PersonalClinic/Views/Patients/Index.cshtml
@@ -24,6 +24,9 @@
                 <th>
                     @Html.DisplayNameFor(model => model.Identifier)
                 </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.BirthDate)
+                </th>
             <th></th>
         </tr>
     </thead>
@@ -41,6 +44,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Identifier)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BirthDate)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
