--- a/PersonalClinic/Views/Patients/Delete.cshtml
+++ b/PersonalClinic/Views/Patients/Delete.cshtml
@@ -36,6 +36,9 @@
         <dd>
             @Html.DisplayFor(model => model.Identifier)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.BirthDate)
+        </dt>
         <dd>
             @Html.DisplayFor(model => model.BirthDate)
         </dd>
