--- a/PersonalClinic/Views/Patients/Details.cshtml
+++ b/PersonalClinic/Views/Patients/Details.cshtml
@@ -34,12 +34,15 @@
         <dd>
             @Html.DisplayFor(model => model.Identifier)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.BirthDate)
+        </dt>
         <dd>
             @Html.DisplayFor(model => model.BirthDate)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
