Add a link to clear the filter

--- a/PersonalClinic/Views/Patients/Index.cshtml
+++ b/PersonalClinic/Views/Patients/Index.cshtml
@@ -10,6 +10,7 @@
     <div class="form-group" align="right">
         Cari : <input type="text" name="SearchString" value="@ViewData["SearchFilter"]" />
         <input type="submit" value="Search" class="btn btn-default" />
+        <a asp-action="Index">Back to Full List</a>
     </div>
 </form>
 
